# nitorch-register

./: README.md  setup.cfg  setup.py
nitorch_register/: __init__.py  affine.py  flow_inv.py  phantoms.py  shoot.py  svf.py  svf1d.py  utils.py
nitorch_register/cli/affreg/: cli.py  parser.py
nitorch_register/cli/autoreg/: __init__.py  helpers.py  main.py  regularisers.py  struct.py
nitorch_register/cli/compose/: cli.py  main.py  parser.py
nitorch_register/cli/orient/: cli.py  main.py  parser.py
nitorch_register/cli/register/: cli.py  parser.py
nitorch_register/cli/reorient/: cli.py  main.py  parser.py
nitorch_register/cli/resize/: main.py  parser.py
nitorch_register/cli/reslice/: main.py  parser.py  struct.py
nitorch_register/cli/simplereg/: cli.py  parser.py
nitorch_register/cli/vexp/: cli.py  main.py  parser.py
nitorch_register/losses/: __init__.py  base.py  cat.py  cc.py  dice.py  emmi.py  gmm.py  mi.py  mse.py  prod.py  robust.py  utils_gmm2.py  utils_hist.py  utils_local.py
nitorch_register/oo/: backends.py  base.py  containers.py  imports.py  shapes.py
nitorch_register/oo/mixins/: math.py  matrix.py  shaped.py  spatial.py  vector.py
nitorch_register/optim/: brent.py  newton.py  powell.py
nitorch_register/pairwise/: __init__.py  impl.py  makeobj.py  objects.py  postproc.py  preproc.py  pyramid.py  run.py
nitorch_register/tools/: topup.py
